--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-<div class="jumbotron text-center marging padding ">
+<div class="jumbotron text-center margin padding ">
   <h1>Foto de praia</h1>
   <p>As praias mais lindas do nosso pais!</p>
 </div>
@@ -23,7 +23,7 @@
 <div class="container">
   <div class="row">
     <div class="col-sm-4">
-      <div> <img srct=""/div>
+      <div class="Praia" > <img src="img/imag.praia.01.jpg" alt=""></div>
       <h3>Praia  1</h3>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
       <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
