--- a/index.html
+++ b/index.html
@@ -22,21 +22,32 @@
  
 <div class="container">
   <div class="row">
-    <div class="col-sm-4">
+    <div class="col-sm-4 esp-botton">
       <div class="Praia" > <img src="img/imag.praia.01.jpg" alt=""></div>
       <h3>Praia  1</h3>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
       <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+    <div class="link-cofig text-center">
+      <a href="" >Saiba mais</a>
     </div>
-    <div class="col-sm-4">
+    </div>
+    <div class="col-sm-4 esp-botton">
+      <div class="Praia" > <img src="2download.jpeg" alt=""></div>
       <h3>Praia 2</h3>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
       <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+      <div class="link-cofig text-center">
+        <a href="" >Saiba mais</a>
+      </div>
     </div>
-    <div class="col-sm-4">
+    <div class="col-sm-4 esp-botton">
+      <div class="Praia" > <img src="3download.jpeg" alt=""></div>
       <h3>Praia 3</h3>        
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
       <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+      div class="link-cofig text-center">
+      <a href="" >Saiba mais</a>
+    </div>
     </div>
   </div>
 </div>
