--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 </div>
  
-<div class="container">
+<div class="container espacamento">
   <div class="row">
     <div class="col-sm-4 esp-botton">
       <div class="Praia" > <img src="img/imag.praia.01.jpg" alt=""></div>
